code commit@Rahul
add icon on login page

--- a/src/main/resources/templates/layouts/login.html
+++ b/src/main/resources/templates/layouts/login.html
@@ -20,52 +20,65 @@
 
 <body>
 
-<form th:action="@{/doLogin}" method="POST">
+	<form th:action="@{/doLogin}" method="POST">
 
-<section class="vh-100" style="background-color: #508bfc;">
-  <div class="container py-5 h-100">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-        <div class="card shadow-2-strong" style="border-radius: 1rem;">
-          <div class="card-body p-5 text-center">
+		<section class="vh-100" style="background-color: #508bfc;">
+			<div class="container py-5 h-100">
+				<div class="row d-flex justify-content-center align-items-center h-100">
+					<div class="col-12 col-md-8 col-lg-6 col-xl-5">
+						<div class="card shadow-2-strong" style="border-radius: 1rem;">
+							<div class="card-body p-5 text-center">
 
-            <h3 class="mb-5">Sign in</h3>
+								<h3 class="mb-5">Sign in</h3>
 
-            <div class="form-outline mb-4">
-              <input type="text" id="typeEmailX-2" class="form-control form-control-lg" name="username"/>
-              <label class="form-label" for="typeEmailX-2" >User Name</label>
-            </div>
+								<div class="form-outline mb-4">
+									<div class="row">
+										<div class="col-md-2">
+											<img src="https://img.icons8.com/ios-glyphs/30/000000/gender-neutral-user.png"/>
+										</div>
+										<div class="col-md-10">
+											<input type="text" id="typeEmailX-2" class="form-control form-control-lg"
+												name="username" placeholder="Enter User Name" />
+										</div>
+									</div>
 
-            <div class="form-outline mb-4">
-              <input type="password" id="typePasswordX-2" class="form-control form-control-lg" name="password"/>
-              <label class="form-label" for="typePasswordX-2" >Password</label>
-            </div>
+									<!--<label class="form-label" for="typeEmailX-2">User Name</label>-->
+								</div>
 
-            <!-- Checkbox -->
-            <div class="form-check d-flex justify-content-start mb-4">
-              <input
-                class="form-check-input"
-                type="checkbox"
-                value=""
-                id="form1Example3"
-              />
-              <label class="form-check-label" for="form1Example3"> Remember password </label>
-            </div>
+								<div class="form-outline mb-4">
+									<div class="row">
+										<div class="col-md-2">
+										<img src="https://img.icons8.com/ios-glyphs/30/000000/password--v1.png"/>								</div>
+										<div class="col-md-10">
+											<input type="password" id="typePasswordX-2"
+												class="form-control form-control-lg" name="password"
+												placeholder="Enter Password" />
+										</div>
+									</div>
 
-            <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
+									<!--<label class="form-label" for="typePasswordX-2">Password</label>-->
+								</div>
 
-            <hr class="my-4">
+								<!-- Checkbox -->
+								<div class="form-check d-flex justify-content-start mb-4">
+									<input class="form-check-input" type="checkbox" value="" id="form1Example3" />
+									<label class="form-check-label" for="form1Example3"> Remember password </label>
+								</div>
 
-           
+								<button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
 
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+								<hr class="my-4">
 
-</form>
+
+
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+	</form>
 
 </body>
 
