--- a/src/main/resources/templates/layouts/Master/categoryMaster.html
+++ b/src/main/resources/templates/layouts/Master/categoryMaster.html
@@ -26,10 +26,10 @@
 
 					<!-- Content Header (Page header) -->
 					<section class="content-header">
-						<h1>
+						<h4>
 							Category Master
 							<!--<small>it all starts here</small>-->
-						</h1>
+						</h4>
 						<ol class="breadcrumb">
 							<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
 							<li><a href="#">Examples</a></li>
@@ -49,11 +49,11 @@
 							<div class="row">
 								<!-- left column -->
 								<div class="col-md-12">
-									<div class="col-md-3">
+									<div class="col-md-2">
 									</div>
 
 
-									<div class="col-md-6 shadow bg-white rounded" style="margin-top: 20px;">
+									<div class="col-md-8 shadow bg-white rounded" style="margin-top: 20px;">
 										<!-- general form elements -->
 										<div class="box box-primary">
 											<div class="box-header with-border">
@@ -64,17 +64,17 @@
 												th:object="${category}">
 												<div class="box-body">
 
-													<div class="form-group">
+													<div class="form-group col-md-6">
 														<label for="inputEmail4">Category Code</label> <input
 															type="text" class="form-control" placeholder="store code"
 															th:field="*{categCode}">
 													</div>
-													<div class="form-group">
+													<div class="form-group col-md-6">
 														<label for="inputEmail4">Description</label> <input type="text"
 															class="form-control" placeholder="location">
 													</div>
 
-													<div class="form-group ">
+													<div class="form-group col-md-6">
 														<label class="form-label">Acount Head</label> <label
 															style="color: red">*</label> <select class="form-control"
 															id="" title="type" th:field="*{accountHead}" required>
@@ -85,19 +85,19 @@
 													</div>
 
 
-													<div class="form-group">
+													<div class="form-group col-md-6">
 														<label for="inputEmail4">Description</label> <input type="text"
 															class="form-control" placeholder="description"
 															th:field="*{description}">
 													</div>
 
-													<div class="form-group">
+													<div class="form-group col-md-6">
 														<label for="inputEmail4">Parent Code</label> <input type="text"
 															class="form-control" placeholder="parent code"
 															th:field="*{parentCode}">
 													</div>
 
-													<div class="form-group">
+													<div class="form-group col-md-6">
 														<label for="inputEmail4">Parent Name</label> <input type="text"
 															class="form-control" placeholder="parent name"
 															th:field="*{parentName}">
@@ -127,17 +127,19 @@
 													<input type="submit" value="Submit" class="btn btn-primary" />
 													<input type="reset" value="Reset" class="btn btn-danger" />
 												</div>
-												<a th:href="@{/category/list}">view category</a>
+
 
 											</form>
 
 
 										</div><!-- /.box -->
-
+										<div style="width: parent; text-align-last: right; margin:8px">
+											<a th:href="@{/category/list}">view category</a>
+										</div>
 									</div>
 
 
-									<div class="col-md-3">
+									<div class="col-md-2">
 									</div>
 								</div>
 
