--- a/src/main/resources/templates/layouts/Master/country.html
+++ b/src/main/resources/templates/layouts/Master/country.html
@@ -6,11 +6,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>AdminLTE 2 | General Form Elements</title>
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-	<link rel="stylesheet" href="../../css/bootstrap.min.css">
+	<link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-	<link rel="stylesheet" href="../../css/AdminLTE.min.css">
-	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css">
+	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
+	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
 
 </head>
 
@@ -19,72 +19,110 @@
 		<div>
 			<div th:replace="fragments/header :: header">...</div>
 			<div th:replace="fragments/sidebar :: sidebar">...</div>
-			<section class="content-wrapper">
-				<div class="row">
-					<!-- left column -->
-					<div class="col-md-12">
-						<div class="col-md-3">
-						</div>
+
+			<div class="wrapper">
+
+				<section class="content-wrapper">
+
+					<!-- Content Header (Page header) -->
+					<section class="content-header">
+						<h4>
+							Country Master
+							<!--<small>it all starts here</small>-->
+						</h4>
+						<ol class="breadcrumb">
+							<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+							<li><a href="#">Examples</a></li>
+							<li class="active">Blank page</li>
+						</ol>
+					</section>
 
 
-						<div class="col-md-6" style="margin-top: 20px;">
-							<!-- general form elements -->
-							<div class="box box-primary">
-								<div class="box-header with-border">
-									<h3 class="box-title">Country Master</h3>
-								</div><!-- /.box-header -->
-								<!-- form start -->
-								<form role="form" th:action="@{/country/}" method="POST" th:object="${country}">
-									<div class="box-body">
+					<!-- Main content -->
+					<section class="content">
 
-										<div class="form-group col-md-6">
-											<label for="inputEmail4">Country Code</label> <input type="text"
-												class="form-control" placeholder="country code"
-												th:field="*{countryCode}">
-										</div>
-										<div class="form-group col-md-6">
-											<label for="inputPassword4">Country Name</label> <input type="text"
-												class="form-control" placeholder="country name"
-												th:field="*{countryName}">
-										</div>
+						<!-- Default box -->
+						<div class="box">
 
-										<div class="form-group" style="margin:10px;">
 
-											<div class="form-check form-check-inline">
-												<input class="form-check-input" type="radio" name="inlineRadioOptions"
-													id="inlineRadio1" value="Y">
-												<label class="form-check-label" for="inlineRadio1"
-													th:field="*{activeYn}">Active</label>
-											</div>
 
-											<div class="form-check form-check-inline">
-												<input class="form-check-input" type="radio" name="inlineRadioOptions"
-													id="inlineRadio1" value="N">
-												<label class="form-check-label" for="inlineRadio1"
-													th:field="*{activeYn}">In-Active</label>
-											</div>
+							<div class="row">
+								<!-- left column -->
+								<div class="col-md-12">
+									<div class="col-md-2">
+									</div>
 
+
+									<div class="col-md-8 shadow bg-white rounded" style="margin-top: 20px;">
+										<!-- general form elements -->
+										<div class="box box-primary">
+											<div class="box-header with-border">
+												<!--<h3 class="box-title">Category Master</h3>-->
+											</div><!-- /.box-header -->
+											<!-- form start -->
+											<form role="form" th:action="@{/country/}" method="POST"
+												th:object="${country}">
+												<div class="box-body">
+
+													<div class="form-group col-md-6">
+														<label for="inputEmail4">Country Code</label> <input type="text"
+															class="form-control" placeholder="country code"
+															th:field="*{countryCode}">
+													</div>
+													<div class="form-group col-md-6">
+														<label for="inputPassword4">Country Name</label> <input
+															type="text" class="form-control" placeholder="country name"
+															th:field="*{countryName}">
+													</div>
+
+
+
+
+													<div class="form-group" style="margin:10px;">
+
+														<div class="form-check form-check-inline">
+															<input class="form-check-input" type="radio"
+																name="inlineRadioOptions" id="inlineRadio1" value="Y">
+															<label class="form-check-label" for="inlineRadio1"
+																th:field="*{activeYn}">Active</label>
+														</div>
+
+														<div class="form-check form-check-inline">
+															<input class="form-check-input" type="radio"
+																name="inlineRadioOptions" id="inlineRadio1" value="N">
+															<label class="form-check-label" for="inlineRadio1"
+																th:field="*{activeYn}">In-Active</label>
+														</div>
+
+													</div>
+												</div><!-- /.box-body -->
+
+												<div class="box-footer" style="margin: 10px">
+													<input type="submit" value="Submit" class="btn btn-primary" />
+													<input type="reset" value="Reset" class="btn btn-danger" />
+												</div>
+
+
+											</form>
+
+
+										</div><!-- /.box -->
+										<div style="width: parent; text-align-last: right; margin:8px">
+											<a th:href="@{/country/list}">View All Country</a>
 										</div>
 									</div>
 
-									<div class="box-footer">
-										<input type="submit" value="Submit" class="btn btn-primary" />
-										<input type="reset" value="Reset" class="btn btn-danger" />
+
+									<div class="col-md-2">
 									</div>
-									<div class="row text-right m-10">
-										<a th:href="@{/country/list}">view country list</a>
-									</div>
-								</form>
-							</div><!-- /.box -->
+								</div>
+
+							</div>
+
 						</div>
-
-
-						<div class="col-md-3">
-						</div>
-					</div>
-
-				</div>
-			</section>
+					</section>
+				</section>
+			</div>
 
 			<div th:replace="fragments/footer :: footer">...</div>
 			<!--   <section class="content">
