--- a/src/main/resources/templates/layouts/Master/openIndentApproval.html
+++ b/src/main/resources/templates/layouts/Master/openIndentApproval.html
@@ -1,209 +1,192 @@
 <!DOCTYPE html>
+<html>
 
-<!--  main-fragment (title, otherStaticResources, header, nav, mainContent, footer)  -->
-<html xmlns:th="http://www.thymeleaf.org" th:replace="~{layouts/main-layout :: main-fragment(  
-                                                ~{::title},
-                                                ~{:: #home-static-resources},
-                                                ~{:: #home-header},
-                                                ~{:: #home-nav},
-                                                ~{:: #home-main-content},  
-                                                ~{:: #home-footer}
-                                               )}">
+<head xmlns:th="http://www.thymeleaf.org">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>AdminLTE 2 | General Form Elements</title>
+	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+	<link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
+	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
 
-<head>
-	<title>Title of Home Page</title>
-
-	<th:block id="home-static-resources">
-
-		<script type="text/javascript" src="../static/home.js" th:src="@{/home.js}"></script>
-		<link rel="stylesheet" type="text/css" href="../static/home.css" th:href="@{/home.css}" />
-
-	</th:block>
 
 </head>
 
-<body>
+<body class="hold-transition skin-blue sidebar-mini">
+	<div class="wrapper">
+		<div>
+			<div th:replace="fragments/header :: header">...</div>
+			<div th:replace="fragments/sidebar :: sidebar">...</div>
 
-	<div id="home-header">ERP WhareHouse</div>
+			<div class="wrapper">
 
-	<div id="home-nav" th:replace="~{fragments/app-fragments :: nav-default}">Home Nav
-	</div>
-
-	<div id="home-main-content">
-		<h4>Open Indent Approval</h4>
+				<section class="content-wrapper">
 
 
+					<div class="row">
+						<!-- left column -->
+						<div class="col-md-12">
 
-		<div class="container">
-			<div class="container-fluid p-0">
 
-				<div class="row">
-					<div class="col-xl-8">
-						<div class="card">
-							<div class="card-header pb-0">
-								<div class="card-actions float-right">
-									<div class="dropdown show">
-										<a href="#" data-toggle="dropdown" data-display="static">
 
-										</a>
+							<div class="col-md-12" style="margin-top: 20px;">
 
-										<div class="dropdown-menu dropdown-menu-right">
-											<a class="dropdown-item" href="#">Action</a> <a class="dropdown-item"
-												href="#">Another action</a> <a class="dropdown-item" href="#">Something
-												else here</a>
-										</div>
+								<div class="box box-primary">
+									<div class="box-header with-border">
+										<h3 class="box-title">Open Indent Approval</h3>
 									</div>
-								</div>
-								<h5 class="card-title mb-0">Clients</h5>
-							</div>
-							<div class="card-body">
-								<div class="table-responsive-sm">
-									<table class="table table-striped" style="width: 80%">
-										<thead>
-											<tr>
-												<th scope="col">#</th>
-												<th scope="col">Indent Number</th>
-												<th scope="col">Indent Date</th>
-												<th scope="col">Indent Type</th>
+									<!-- form start -->
+									<form role="form">
+										<div class="box-body">
+											<div class="table-responsive-sm">
+												<table class="table table-striped" style="width: 80%">
+													<thead>
+														<tr>
+															<th scope="col">#</th>
+															<th scope="col">Indent Number</th>
+															<th scope="col">Indent Date</th>
+															<th scope="col">Indent Type</th>
 
 
-												<th scope="col">Approval Status</th>
-
-
-
-												<th scope="col">Action</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr th:each="indent,iter  : ${openIndentList}">
-												<td th:text="${iter.index}">1</td>
-												<td th:text="${indent.indentNumber}">Garrett Winters</td>
-												<td th:text="${indent.indentDate}">Garrett Winters</td>
-												<td th:text="${indent.indentType}">Good Guys</td>
+															<th scope="col">Approval Status</th>
 
 
 
-												<td class="text-center"
-													th:if="${indent.approvalStatus1 == 'N' and indent.approvalStatus2 == 'N' and indent.approvalStatus3 == 'N'}">
-													<div class="dropdown show">
-														<a class="btn btn-primary dropdown-toggle" href="#"
-															role="button" id="dropdownMenuLink" data-toggle="dropdown"
-															aria-haspopup="true" aria-expanded="false"> level-1 Pending
-														</a>
-
-														<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-															<a class="dropdown-item"
-																th:href="@{/openindent/approve/{id}/{status}/{level}/(id=${indent.indentNumber},status=${'Y'},level=${'1'})}">Approved</a>
-															<a class="dropdown-item"
-																th:href="@{/openindent/approve/{id}/{status}/{level}/(id=${indent.indentNumber},status=${'N'},level=${'1'})}">Cancel</a>
-
-														</div>
-													</div>
-												</td>
-
-												<td class="text-center"
-													th:if="${indent.approvalStatus1 == 'Y' and indent.approvalStatus2 == 'N' and indent.approvalStatus3 == 'N'}">
-													<div class="dropdown show">
-														<a class="btn btn-primary dropdown-toggle" href="#"
-															role="button" id="dropdownMenuLink" data-toggle="dropdown"
-															aria-haspopup="true" aria-expanded="false"> level-2 Pending
-														</a>
-
-														<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-															<a class="dropdown-item"
-																th:href="@{/openindent/approve/{id}/{status}/{level}/(id=${indent.indentNumber},status=${'Y'},level=${'2'})}">Approved</a>
-															<a class="dropdown-item"
-																th:href="@{/openindent/approve/{id}/{status}/{level}/(id=${indent.indentNumber},status=${'N'},level=${'2'})}">Cancel</a>
-
-														</div>
-													</div>
-												</td>
-
-												<td class="text-center"
-													th:if="${indent.approvalStatus1 == 'Y' and indent.approvalStatus2 == 'Y' and indent.approvalStatus3 == 'N'}">
-													<div class="dropdown show">
-														<a class="btn btn-primary dropdown-toggle" href="#"
-															role="button" id="dropdownMenuLink" data-toggle="dropdown"
-															aria-haspopup="true" aria-expanded="false"> level-3 Pending
-														</a>
-
-														<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-															<a class="dropdown-item"
-																th:href="@{/openindent/approve/{id}/{status}/{level}/(id=${indent.indentNumber},status=${'Y'},level=${'3'})}">Approved</a>
-															<a class="dropdown-item"
-																th:href="@{/openindent/approve/{id}/{status}/{level}/(id=${indent.indentNumber},status=${'N'},level=${'3'})}">Cancel</a>
-
-														</div>
-													</div>
-												</td>
-												
-												<td class="text-center"
-													th:if="${indent.approvalStatus1 == 'Y' and indent.approvalStatus2 == 'Y' and indent.approvalStatus3 == 'Y'}">
-													<div class="dropdown show">
-														<a class="btn btn-primary dropdown-toggle" href="#"
-															role="button" id="dropdownMenuLink" data-toggle="dropdown"
-															aria-haspopup="true" aria-expanded="false"> &nbsp&nbsp&nbsp&nbsp&nbspApproved&nbsp&nbsp&nbsp&nbsp&nbsp
-														</a>
-
-														
-													</div>
-												</td>
+															<th scope="col">Action</th>
+														</tr>
+													</thead>
+													<tbody>
 
 
-												<!--<a
+														<tr th:each="indent,iter  : ${openIndentList}">
+															<td th:text="${iter.index}">1</td>
+															<td th:text="${indent.indentNumber}">Garrett Winters</td>
+															<td th:text="${indent.indentDate}">Garrett Winters</td>
+															<td th:text="${indent.indentType}">Good Guys</td>
+
+
+
+															<td class="text-center"
+																th:if="${indent.approvalStatus1 == 'N' and indent.approvalStatus2 == 'N' and indent.approvalStatus3 == 'N'}">
+																<div class="dropdown show">
+																	<a class="btn btn-primary dropdown-toggle" href="#"
+																		role="button" id="dropdownMenuLink"
+																		data-toggle="dropdown" aria-haspopup="true"
+																		aria-expanded="false"> level-1 Pending
+																	</a>
+
+																	<div class="dropdown-menu"
+																		aria-labelledby="dropdownMenuLink">
+																		<a class="dropdown-item"
+																			th:href="@{/openindent/approve/{id}/{status}/{level}/(id=${indent.indentNumber},status=${'Y'},level=${'1'})}">Approved</a>
+																		<a class="dropdown-item"
+																			th:href="@{/openindent/approve/{id}/{status}/{level}/(id=${indent.indentNumber},status=${'N'},level=${'1'})}">Cancel</a>
+
+																	</div>
+																</div>
+															</td>
+
+															<td class="text-center"
+																th:if="${indent.approvalStatus1 == 'Y' and indent.approvalStatus2 == 'N' and indent.approvalStatus3 == 'N'}">
+																<div class="dropdown show">
+																	<a class="btn btn-primary dropdown-toggle" href="#"
+																		role="button" id="dropdownMenuLink"
+																		data-toggle="dropdown" aria-haspopup="true"
+																		aria-expanded="false"> level-2 Pending
+																	</a>
+
+																	<div class="dropdown-menu"
+																		aria-labelledby="dropdownMenuLink">
+																		<a class="dropdown-item"
+																			th:href="@{/openindent/approve/{id}/{status}/{level}/(id=${indent.indentNumber},status=${'Y'},level=${'2'})}">Approved</a>
+																		<a class="dropdown-item"
+																			th:href="@{/openindent/approve/{id}/{status}/{level}/(id=${indent.indentNumber},status=${'N'},level=${'2'})}">Cancel</a>
+
+																	</div>
+																</div>
+															</td>
+
+															<td class="text-center"
+																th:if="${indent.approvalStatus1 == 'Y' and indent.approvalStatus2 == 'Y' and indent.approvalStatus3 == 'N'}">
+																<div class="dropdown show">
+																	<a class="btn btn-primary dropdown-toggle" href="#"
+																		role="button" id="dropdownMenuLink"
+																		data-toggle="dropdown" aria-haspopup="true"
+																		aria-expanded="false"> level-3 Pending
+																	</a>
+
+																	<div class="dropdown-menu"
+																		aria-labelledby="dropdownMenuLink">
+																		<a class="dropdown-item"
+																			th:href="@{/openindent/approve/{id}/{status}/{level}/(id=${indent.indentNumber},status=${'Y'},level=${'3'})}">Approved</a>
+																		<a class="dropdown-item"
+																			th:href="@{/openindent/approve/{id}/{status}/{level}/(id=${indent.indentNumber},status=${'N'},level=${'3'})}">Cancel</a>
+
+																	</div>
+																</div>
+															</td>
+
+															<td class="text-center"
+																th:if="${indent.approvalStatus1 == 'Y' and indent.approvalStatus2 == 'Y' and indent.approvalStatus3 == 'Y'}">
+																<div class="dropdown show">
+																	<a class="btn btn-primary dropdown-toggle" href="#"
+																		role="button" id="dropdownMenuLink"
+																		data-toggle="dropdown" aria-haspopup="true"
+																		aria-expanded="false">
+																		&nbsp&nbsp&nbsp&nbsp&nbspApproved&nbsp&nbsp&nbsp&nbsp&nbsp
+																	</a>
+
+
+																</div>
+															</td>
+
+
+															<!--<a
 														th:href="@{/openindent/approve/{id}(id=${indent.indentNumber})}">view</a>-->
 
 
-												<td><span> <a
-															th:href="@{/openindent/view/{id}(id=${indent.indentNumber})}">view</a></span>
-												</td>
+															<td><span> <a
+																		th:href="@{/openindent/view/{id}(id=${indent.indentNumber})}">view</a></span>
+															</td>
 
 
-											</tr>
+														</tr>
 
 
+													</tbody>
+												</table>
+											</div>
+										</div>
 
+										<div class="box-footer">
+											<input type="submit" value="Back" onclick='window.history.back();'
+												class="btn btn-link" />
+										</div>
 
-										</tbody>
-									</table>
+									</form>
 								</div>
 							</div>
 
 
-							<!-- <div class="card-body">
-
-								
-
-								<label for="email">Status:</label> <input type="email" id="email"
-									placeholder="Enter email" name="email">
-									<input type="password" id="pwd" placeholder="Enter password" name="pswd">
-									</br>
-									<p></p>
-									<label for="email">Remarks:</label> <input type="email" id="email"
-									placeholder="Enter email" name="email">
-									
-
-							</div>
- -->
 
 						</div>
+
 					</div>
-
-
-				</div>
-
+				</section>
 			</div>
-		</div>
 
-
-
-	</div>
-
-
-	<!-- <div id="home-footer" th:replace="~{/fragments/app-fragments :: copyright}">
-        Footer
-    </div> -->
-
+			<div th:replace="fragments/footer :: footer">...</div>
+			<!--   <section class="content">
+        
+        </section>-->
+			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
+			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
+			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
+			<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 
 </body>
 
